# CMakeList.txt : CMake project for Cpp-Chess-Engine, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Cpp-Chess-Engine "Cpp-Chess-Engine.cpp" "Cpp-Chess-Engine.h" "Model.h" "Model.cpp" "Solver.h" "Solver.cpp")

# TODO: Add tests and install targets if needed.
